# Silnik2D_PGK_2

Nowy silnik/: CMakeLists.txt
src/: main.cpp
